<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="35dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/control_view_shape"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:id="@+id/btn_go"
        android:src="@drawable/ic_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_or_pause" />


    <ImageView
        android:id="@+id/btn_inc"
        android:src="@drawable/ic_increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/inc_interval" />

    <TextView
        android:id="@+id/tv_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <ImageView
        android:id="@+id/btn_low"
        android:src="@drawable/ic_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/low_interval" />

    <ImageView
        android:id="@+id/btn_close"
        android:src="@drawable/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close" />

</LinearLayout>